<resources>
    <string name="app_name">شهروند سبز</string>
    <string name="step_count_button_text">step</string>
    <string name="bike_button_text">bike</string>
    <string name="leader_board_button_text">leader board</string>
    <string name="gps_network_not_enabled">your location is off</string>
    <string name="menu_last_action_button_text">continue last action</string>
    <string name="stop_service">stop</string>
    <string name="start_service">start</string>
    <string name="resume_service">resume</string>
    <string name="pause_service">action</string>
    <string name="step_activity_name">Step count</string>
    <string name="bike_activity_name">bike activity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home"> </string>
    <string name="title_dashboard"> </string>
    <string name="title_notifications"> </string>
    <string name="title_activity_main"> </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">شماره همراه</string>
    <string name="login">ورود</string>
    <string name="background">it is a background</string>
    <string name="code">کد تایید</string>
    <string name="ok">تایید</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>
