<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <TextView
        android:id="@+id/app_name_text_view_id"
        style="@style/AppTheme.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_step_button_id"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="150dp"
        style="@style/AppTheme.Button"
        android:text="@string/step_count_button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/start_bycicle_button_id"
        app:layout_constraintTop_toBottomOf="@id/app_name_text_view_id" />

    <Button
        android:id="@+id/start_bycicle_button_id"
        android:layout_width="75dp"
        android:layout_height="75dp"
        style="@style/AppTheme.Button"
        android:text="@string/bike_button_text"
        app:layout_constraintLeft_toRightOf="@id/start_step_button_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/start_step_button_id" />

    <Button
        android:id="@+id/leader_board_button_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/leader_board_button_text"
        style="@style/AppTheme.Button"
        app:layout_constraintTop_toBottomOf="@id/start_step_button_id"
        app:layout_constraintLeft_toLeftOf="@id/start_step_button_id"
        app:layout_constraintRight_toRightOf="@id/start_bycicle_button_id"
        app:layout_constraintBottom_toBottomOf="parent"

        />


</android.support.constraint.ConstraintLayout>