<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.login.Login"

    >

    <ImageView
        android:contentDescription="@string/background"
        android:id="@+id/back_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@mipmap/temp_pic"
        android:scaleType="fitXY"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/phone_input_id"
        />

    <EditText
        android:id="@+id/phone_input_id"
        style="@style/AppTheme.EditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/login_phone_input_back"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@id/submit_login_id"
        android:fitsSystemWindows="true"
        android:nextFocusDown="@id/submit_login_id"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="1"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/submit_login_id"
        style="@style/AppTheme.Button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/login_submit_back"
        android:minHeight="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/phone_input_id"
        app:layout_constraintRight_toRightOf="@id/phone_input_id" />

</androidx.constraintlayout.widget.ConstraintLayout>